--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 fastapi==0.115.0
 uvicorn==0.30.6
 jinja2==3.1.4
-langchain==0.3.7
-langchain-google-genai==2.0.1
 pydantic==2.9.2
 python-multipart==0.0.12
+cryptography==44.0.2
 pytest==8.3.3
